--- a/src/Components/CardHeader.module.css
+++ b/src/Components/CardHeader.module.css
@@ -11,6 +11,21 @@
     position: absolute;
     left: 0;
     bottom: -3.7rem;
+}
 
+@media screen and (min-width: 768px) {
+    .header {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        border-radius: .75rem 0 0 .75rem;
+        height: auto;
+        position: relative;
+    }
 
+    .drawers {
+        border-radius: .75rem 0 0 .75rem;
+        position: absolute;
+        top: 0;
+        width: 125%;
+    }
 }
